# workshops

./: .gitignore  README.md  build.gradle.kts
2025-05-06_Spring-101-Java-Maven/: README.md
2025-05-06_Spring-101-Kotlin-Gradle/: README.md
2025-05-20_iOS-101-SwiftUI-basic/: README.md
2025-05_Spring-101-Java-Maven/: pom.xml
2025-05_iOS-101-SwiftUI-basic/pokecard/pokecard.xcodeproj/: project.pbxproj
2025-06-03_Android-101-Kotlin/: README.md
2025-06-10_Go-101/: Requests.http  init.sql
2025-06-10_Go-101/api/db/: db.go
2025-06-10_Go-101/api/middlewares/: AuthRequired.go
2025-06-10_Go-101/api/model/: user.go
2025-06-10_Go-101/cmd/: main.go
2025-06_Android-101-Kotlin/: download_images.sh
2025-06_Go-101/: README.md  docker-compose.yml  go.mod  go.sum
2025-06_KMP-101/: settings.gradle.kts
2025-06_KMP-101/android/: build.gradle.kts
2025-06_KMP-101/gradle/: libs.versions.toml
2025-06_KMP-101/shared/: build.gradle.kts  download_images.sh  pokemon_list.json
2025-07-08_KMP-101/: README.md  build.gradle.kts
2025-07-08_KMP-101/gradle/: libs.versions.toml
2025-07-08_KMP-101/shared/: build.gradle.kts
2025-09-30_Rust-101-Diesel/: .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  langages_comparatif_backend.md
2025-09-30_Rust-101-Diesel/migrations/20250101000000_create_users/: up.sql
2025-09-30_Rust-101-Diesel/src/: db.rs  error.rs  handlers.rs  main.rs  models.rs
2025-09-30_Rust-101-Diesel/src/annotated_files/: main.rs
2025-09-30_Rust-101-Diesel/src/not_annotated_files/: db.rs  handlers.rs  main.rs  models.rs
(+223 files in other folders)
