
[package]
name = "rust-101-diesel"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.3", features = ["postgres", "uuid", "r2d2", "chrono"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }